--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^13.0.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "redis": "^4.7.0",
     "uuid": "^10.0.0"
